@@ -1,208 +1,208 @@
 // src/main/java/com/example/jobfinder/service/GeminiService.java
 package com.example.jobfinder.service;
 
-import com.example.jobfinder.dto.gemini.GeminiIntentRequest;
-import com.example.jobfinder.dto.gemini.GeminiIntentResponse;
-import com.example.jobfinder.exception.AppException; // Import AppException
-import com.example.jobfinder.exception.ErrorCode; // Import ErrorCode
+import com.example.jobfinder.dto.gemini.GeminiIntentRequest; // Có thể đổi tên DTO sau nếu cần, nhưng giữ nguyên ở đây
+import com.example.jobfinder.dto.gemini.GeminiIntentResponse; // Có thể đổi tên DTO sau nếu cần, nhưng giữ nguyên ở đây
+import com.example.jobfinder.exception.AppException;
+import com.example.jobfinder.exception.ErrorCode;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod; // Cần thiết cho restTemplate.exchange
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
-import org.springframework.web.client.HttpServerErrorException; // ✅ Import HttpServerErrorException
-import org.springframework.web.client.ResourceAccessException; // ✅ Import ResourceAccessException
+import org.springframework.web.client.HttpServerErrorException;
+import org.springframework.web.client.ResourceAccessException;
 import org.springframework.web.client.RestTemplate;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections; // Cần thiết cho Collections.singletonMap/List
+import java.util.Collections;
 import java.util.List;
-import java.util.Map; // Cần thiết cho Map
+import java.util.Map;
 
 @Service
 @Slf4j
-public class GeminiService {
+public class GeminiService { // GIỮ NGUYÊN TÊN CLASS LÀ GeminiService
 
     private final RestTemplate restTemplate;
     private final ObjectMapper objectMapper;
 
-    @Value("${google.gemini.api-key}")
-    private String geminiApiKey;
+    // Cập nhật các biến @Value để trỏ đến cấu hình OpenAI
+    @Value("${OPENAI_API_KEY}")
+    private String openaiApiKey;
 
-    @Value("${google.gemini.model-name}")
-    private String modelName;
+    @Value("${OPENAI_MODEL_NAME}")
+    private String modelName; // Sẽ là tên model của OpenAI (ví dụ: gpt-4o-mini)
+
+    @Value("${OPENAI_BASE_URL}") // Thêm thuộc tính mới cho base URL của OpenAI
+    private String openaiBaseUrl;
 
     private static final int MAX_RETRIES = 3;
     private static final long INITIAL_RETRY_DELAY_MS = 1000; // 1 giây
-    private Class<?> responseType;
 
     public GeminiService(RestTemplate restTemplate, ObjectMapper objectMapper) {
         this.restTemplate = restTemplate;
         this.objectMapper = objectMapper;
     }
 
+    // --- Phương thức getGeminiResponse (Nội dung đã đổi thành OpenAI) ---
     public String getGeminiResponse(String prompt) {
-        log.info("Sending text prompt to Gemini: {}", prompt);
-        String url = String.format("https://generativelanguage.googleapis.com/v1beta/models/%s:generateContent?key=%s",
-                modelName, geminiApiKey);
+        log.info("Sending text prompt to OpenAI (via GeminiService): {}", prompt);
+        // Endpoint của OpenAI cho Chat Completions
+        String url = openaiBaseUrl + "/chat/completions";
 
         try {
-            // ✅ Sử dụng ObjectMapper để tạo request body an toàn hơn thay vì String.format
-            Map<String, Object> part = Collections.singletonMap("text", prompt);
-            Map<String, Object> content = Collections.singletonMap("parts", Collections.singletonList(part));
-            Map<String, Object> requestBodyMap = Collections.singletonMap("contents", Collections.singletonList(content));
+            // Cấu trúc request body của OpenAI cho Chat Completions API
+            // {
+            //   "model": "gpt-4o-mini",
+            //   "messages": [
+            //     { "role": "user", "content": "..." }
+            //   ]
+            // }
+            List<Map<String, String>> messages = new ArrayList<>();
+            messages.add(Map.of("role", "user", "content", prompt));
+
+            Map<String, Object> requestBodyMap = Map.of(
+                    "model", modelName,
+                    "messages", messages
+            );
 
             String jsonRequestBody = objectMapper.writeValueAsString(requestBodyMap);
 
             HttpHeaders headers = new HttpHeaders();
             headers.setContentType(MediaType.APPLICATION_JSON);
+            headers.setBearerAuth(openaiApiKey); // Thêm Authorization header cho OpenAI
             HttpEntity<String> request = new HttpEntity<>(jsonRequestBody, headers);
 
-            return executeGeminiRequest(url, request, String.class, "candidates[0].content.parts[0].text");
+            // Path để lấy nội dung từ response của OpenAI
+            String jsonPath = "choices[0].message.content";
+            return executeGeminiRequest(url, request, String.class, jsonPath); // Giữ nguyên tên phương thức executeGeminiRequest
+
         } catch (IOException e) {
-            log.error("Error creating Gemini request body: {}", e.getMessage(), e);
+            log.error("Error creating OpenAI request body (via GeminiService): {}", e.getMessage(), e);
             throw new AppException(ErrorCode.INTERNAL_SERVER_ERROR);
         }
     }
 
+    // --- Phương thức analyzeIntent (Nội dung đã đổi thành OpenAI) ---
     public GeminiIntentResponse.IntentAnalysisResult analyzeIntent(String userQuery, String systemInstruction) throws IOException {
-        log.info("Analyzing intent for query: {}", userQuery);
+        log.info("Analyzing intent for query (via GeminiService/OpenAI): {}", userQuery);
 
-        String url = String.format("https://generativelanguage.googleapis.com/v1beta/models/%s:generateContent?key=%s",
-                modelName, geminiApiKey);
+        String url = openaiBaseUrl + "/chat/completions";
 
-        List<GeminiIntentRequest.Content> contents = new ArrayList<>();
-        contents.add(new GeminiIntentRequest.Content(
-                List.of(new GeminiIntentRequest.Part(systemInstruction)), "user"
-        ));
-        contents.add(new GeminiIntentRequest.Content(
-                List.of(new GeminiIntentRequest.Part(userQuery)), "user"
-        ));
+        // Cấu trúc messages cho OpenAI, bao gồm system instruction
+        List<Map<String, String>> messages = new ArrayList<>();
+        messages.add(Map.of("role", "system", "content", systemInstruction)); // Vai trò system
+        messages.add(Map.of("role", "user", "content", userQuery));
 
-        GeminiIntentRequest requestBody = new GeminiIntentRequest(contents);
+        Map<String, Object> requestBodyMap = Map.of(
+                "model", modelName,
+                "messages", messages,
+                "response_format", Map.of("type", "json_object") // Yêu cầu output là JSON object
+        );
 
         String jsonRequestBody;
         try {
-            jsonRequestBody = objectMapper.writeValueAsString(requestBody);
+            jsonRequestBody = objectMapper.writeValueAsString(requestBodyMap);
         } catch (IOException e) {
-            log.error("Error serializing GeminiIntentRequest: {}", e.getMessage(), e);
-            throw new IOException("Lỗi tạo yêu cầu phân tích ý định: " + e.getMessage(), e);
+            log.error("Error serializing OpenAI Intent Request (via GeminiService): {}", e.getMessage(), e);
+            throw new IOException("Lỗi tạo yêu cầu phân tích ý định OpenAI: " + e.getMessage(), e);
         }
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.setBearerAuth(openaiApiKey);
         HttpEntity<String> request = new HttpEntity<>(jsonRequestBody, headers);
-        String rawResponse = executeGeminiRequest(url, request, String.class, null);
+
+        // Path để lấy nội dung JSON string từ response của OpenAI
+        String rawResponseContent = executeGeminiRequest(url, request, String.class, "choices[0].message.content");
 
         try {
-            JsonNode rootNode = objectMapper.readTree(rawResponse);
-            JsonNode candidatesNode = rootNode.path("candidates");
-
-            if (candidatesNode.isArray() && !candidatesNode.isEmpty()) {
-                JsonNode firstCandidate = candidatesNode.get(0);
-                JsonNode contentNode = firstCandidate.path("content");
-                JsonNode partsNode = contentNode.path("parts");
-
-                if (partsNode.isArray() && !partsNode.isEmpty()) {
-                    JsonNode firstPart = partsNode.get(0);
-                    JsonNode textNode = firstPart.path("text");
-                    if (textNode.isTextual()) {
-                        String jsonString = textNode.asText();
-                        jsonString = jsonString.replace("```json", "").replace("```", "").trim();
-                        return objectMapper.readValue(jsonString, GeminiIntentResponse.IntentAnalysisResult.class);
-                    }
-                }
-            }
-            log.warn("Gemini intent analysis response did not contain expected JSON: {}", rawResponse);
-            GeminiIntentResponse.IntentAnalysisResult result = new GeminiIntentResponse.IntentAnalysisResult();
-            result.setIntent("unclear");
-            return result;
+            // rawResponseContent bây giờ là chuỗi JSON do OpenAI trả về
+            // Bạn cần đảm bảo cấu trúc JSON này khớp với GeminiIntentResponse.IntentAnalysisResult
+            // Nếu không khớp, bạn cần định nghĩa DTO mới và điều chỉnh logic parsing ở đây.
+            // Loại bỏ các ký tự bọc (```json ... ```) nếu có
+            String cleanJsonString = rawResponseContent.replace("```json", "").replace("```", "").trim();
+            return objectMapper.readValue(cleanJsonString, GeminiIntentResponse.IntentAnalysisResult.class);
         } catch (IOException e) {
-            log.error("Failed to parse Gemini intent analysis response: {}", rawResponse, e);
-            throw new IOException("Lỗi khi phân tích ý định từ Gemini.", e);
+            log.error("Failed to parse OpenAI intent analysis response (via GeminiService): {}", rawResponseContent, e);
+            throw new IOException("Lỗi khi phân tích ý định từ OpenAI.", e);
         }
     }
 
+    // --- Phương thức generateResponseWithContext (Nội dung đã đổi thành OpenAI) ---
     public String generateResponseWithContext(String userMessage, String context) {
-        log.info("Generating response with context for user message: '{}', context: '{}'", userMessage, context);
+        log.info("Generating response with context for user message: '{}', context: '{}' (via GeminiService/OpenAI)", userMessage, context);
 
-        String url = String.format("https://generativelanguage.googleapis.com/v1beta/models/%s:generateContent?key=%s",
-                modelName, geminiApiKey);
+        String url = openaiBaseUrl + "/chat/completions";
 
-        List<GeminiIntentRequest.Content> contents = new ArrayList<>();
+        List<Map<String, String>> messages = new ArrayList<>();
 
         if (context != null && !context.trim().isEmpty()) {
-            contents.add(new GeminiIntentRequest.Content(
-                    List.of(new GeminiIntentRequest.Part("Thông tin dữ liệu: " + context)), "user"
-            ));
+            messages.add(Map.of("role", "system", "content", "Thông tin dữ liệu: " + context));
         }
+        messages.add(Map.of("role", "user", "content", userMessage));
 
-        contents.add(new GeminiIntentRequest.Content(
-                List.of(new GeminiIntentRequest.Part(userMessage)), "user"
-        ));
-
-        GeminiIntentRequest requestBody = new GeminiIntentRequest(contents);
+        Map<String, Object> requestBodyMap = Map.of(
+                "model", modelName,
+                "messages", messages
+        );
 
         String jsonRequestBody;
         try {
-            jsonRequestBody = objectMapper.writeValueAsString(requestBody);
+            jsonRequestBody = objectMapper.writeValueAsString(requestBodyMap);
         } catch (IOException e) {
-            log.error("Error serializing GeminiIntentRequest for context generation: {}", e.getMessage(), e);
+            log.error("Error serializing OpenAI request for context generation (via GeminiService): {}", e.getMessage(), e);
             throw new AppException(ErrorCode.INTERNAL_SERVER_ERROR);
         }
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.setBearerAuth(openaiApiKey);
         HttpEntity<String> request = new HttpEntity<>(jsonRequestBody, headers);
 
-        return executeGeminiRequest(url, request, String.class, "candidates[0].content.parts[0].text");
+        String jsonPath = "choices[0].message.content";
+        return executeGeminiRequest(url, request, String.class, jsonPath);
     }
 
 
-    // Phương thức chung để xử lý gửi request và parse response
+    // --- Phương thức chung để xử lý gửi request và parse response (Nội dung đã đổi thành OpenAI) ---
+    // Giữ nguyên tên phương thức là executeGeminiRequest
     private <T> T executeGeminiRequest(String url, HttpEntity<?> request, Class<T> responseType, String jsonPath) {
-        this.responseType = responseType;
         for (int attempt = 1; true; attempt++) {
             try {
-                log.debug("Executing Gemini request to {} (Attempt {}/{})", url, attempt, MAX_RETRIES);
+                log.debug("Executing OpenAI request (via GeminiService) to {} (Attempt {}/{})", url, attempt, MAX_RETRIES);
                 ResponseEntity<String> responseEntity = restTemplate.exchange(url, HttpMethod.POST, request, String.class);
                 String responseBody = responseEntity.getBody();
 
                 if (responseEntity.getStatusCode().is2xxSuccessful()) {
-                    log.debug("Gemini raw response (Attempt {}): {}", attempt, responseBody);
+                    log.debug("OpenAI raw response (Attempt {}): {}", attempt, responseBody);
                     if (jsonPath != null) {
                         if (responseBody == null || responseBody.isEmpty()) {
-                            log.warn("Gemini API returned empty response body for jsonPath request.");
-                            throw new AppException(ErrorCode.GEMINI_RESPONSE_PARSING_ERROR);
+                            log.warn("OpenAI API returned empty response body for jsonPath request (via GeminiService).");
+                            throw new AppException(ErrorCode.GEMINI_RESPONSE_PARSING_ERROR); // Giữ ErrorCode cũ hoặc đổi mới
                         }
                         try {
                             JsonNode rootNode = objectMapper.readTree(responseBody);
                             String extractedText = parseJsonNodeByPath(rootNode, jsonPath);
                             if (extractedText == null) {
-                                log.warn("Could not extract text from Gemini response using path: {}. Raw response: {}", jsonPath, responseBody);
-                                // Thay vì trả về chuỗi rỗng, nên ném lỗi để xử lý nhất quán hơn
+                                log.warn("Could not extract text from OpenAI response using path: {}. Raw response: {}", jsonPath, responseBody);
                                 throw new AppException(ErrorCode.GEMINI_RESPONSE_PARSING_ERROR);
                             }
                             return (T) extractedText;
                         } catch (IOException e) {
-                            log.error("Error parsing Gemini API response JSON (Attempt {}): {}", attempt, e.getMessage(), e);
+                            log.error("Error parsing OpenAI API response JSON (Attempt {}): {}", attempt, e.getMessage(), e);
                             throw new AppException(ErrorCode.GEMINI_RESPONSE_PARSING_ERROR);
                         }
                     } else {
-                        // Trường hợp jsonPath == null, trả về responseBody thô (dành cho analyzeIntent)
                         return (T) responseBody;
                     }
-                } else if (responseEntity.getStatusCode().value() == 503) {
-                    // ✅ Xử lý lỗi 503 Service Unavailable
-                    log.warn("Gemini API returned 503 Service Unavailable (Attempt {}/{}) for URL {}. Retrying...",
-                            attempt, MAX_RETRIES, url);
+                } else if (responseEntity.getStatusCode().value() == 503 || responseEntity.getStatusCode().value() == 429) {
+                    // Xử lý lỗi 503 Service Unavailable hoặc 429 Too Many Requests (Rate Limit của OpenAI)
+                    log.warn("OpenAI API returned {} (Attempt {}/{}) for URL {}. Retrying...",
+                            responseEntity.getStatusCode().value(), attempt, MAX_RETRIES, url);
                     if (attempt < MAX_RETRIES) {
                         long currentDelay = INITIAL_RETRY_DELAY_MS * (long) Math.pow(2, attempt - 1); // Exponential backoff
                         try {
@@ -210,21 +210,19 @@ public class GeminiService {
                             Thread.sleep(currentDelay);
                         } catch (InterruptedException ie) {
                             Thread.currentThread().interrupt();
-                            log.error("Thread interrupted during retry attempt {} for Gemini API call.", attempt);
                             throw new AppException(ErrorCode.INTERNAL_SERVER_ERROR);
                         }
                     } else {
-                        log.error("Exceeded max retries for Gemini API call due to 503 error for URL {}.", url);
-                        throw new AppException(ErrorCode.GEMINI_API_ERROR);
+                        log.error("Exceeded max retries for OpenAI API call due to {} error for URL {}.", responseEntity.getStatusCode().value(), url);
+                        throw new AppException(ErrorCode.GEMINI_API_ERROR); // Giữ ErrorCode cũ hoặc đổi mới
                     }
                 } else {
-                    // Xử lý các lỗi HTTP khác (4xx, 5xx khác 503)
-                    log.error("Gemini API returned non-2xx status (Attempt {}): {} - {}", attempt, responseEntity.getStatusCode(), responseBody);
-                    throw new AppException(ErrorCode.GEMINI_API_ERROR);
+                    log.error("OpenAI API returned non-2xx status (Attempt {}): {} - {}", attempt, responseEntity.getStatusCode(), responseBody);
+                    throw new AppException(ErrorCode.GEMINI_API_ERROR); // Giữ ErrorCode cũ hoặc đổi mới
                 }
-            } catch (HttpServerErrorException.ServiceUnavailable e) {
-                // ✅ Bắt lỗi 503 Service Unavailable từ HttpServerErrorException
-                log.warn("Gemini API returned 503 Service Unavailable (Exception, Attempt {}/{}) for URL {}: {}",
+            } catch (HttpServerErrorException.ServiceUnavailable | HttpServerErrorException.BadGateway e) {
+                // Bắt lỗi 503 Service Unavailable hoặc 502 Bad Gateway từ Exception
+                log.warn("OpenAI API returned 5xx Service Unavailable/Bad Gateway (Exception, Attempt {}/{}) for URL {}: {}",
                         attempt, MAX_RETRIES, url, e.getMessage());
                 if (attempt < MAX_RETRIES) {
                     long currentDelay = INITIAL_RETRY_DELAY_MS * (long) Math.pow(2, attempt - 1); // Exponential backoff
@@ -233,28 +231,26 @@ public class GeminiService {
                         Thread.sleep(currentDelay);
                     } catch (InterruptedException ie) {
                         Thread.currentThread().interrupt();
-                        ;
                         throw new AppException(ErrorCode.INTERNAL_SERVER_ERROR);
                     }
                 } else {
-                    log.error("Exceeded max retries for Gemini API call due to 503 exception for URL {}.", url);
+                    log.error("Exceeded max retries for OpenAI API call due to 5xx exception for URL {}.", url);
                     throw new AppException(ErrorCode.GEMINI_API_ERROR);
                 }
             } catch (HttpClientErrorException e) {
-                log.error("Client error calling Gemini API (Attempt {}): {}: {}", attempt, e.getStatusCode(), e.getResponseBodyAsString(), e);
-                // Không retry cho lỗi client (4xx)
+                log.error("Client error calling OpenAI API (Attempt {}): {}: {}", attempt, e.getStatusCode(), e.getResponseBodyAsString(), e);
                 throw new AppException(ErrorCode.GEMINI_API_ERROR);
             } catch (ResourceAccessException e) {
-                log.error("Network or connection error calling Gemini API for URL {} (Attempt {}): {}", url, attempt, e.getMessage(), e);
-                // Có thể retry cho lỗi mạng nếu muốn, nhưng ở đây tôi ném lỗi ngay
+                log.error("Network or connection error calling OpenAI API for URL {} (Attempt {}): {}", url, attempt, e.getMessage(), e);
                 throw new AppException(ErrorCode.NETWORK_ERROR);
             } catch (Exception e) {
-                log.error("Unexpected error calling Gemini API for URL {} (Attempt {}): {}", url, attempt, e.getMessage(), e);
+                log.error("Unexpected error calling OpenAI API for URL {} (Attempt {}): {}", url, attempt, e.getMessage(), e);
                 throw new AppException(ErrorCode.INTERNAL_SERVER_ERROR);
             }
         }
     }
 
+    // parseJsonNodeByPath giữ nguyên
     private String parseJsonNodeByPath(JsonNode rootNode, String path) {
         String[] parts = path.split("\\.");
         JsonNode currentNode = rootNode;
